--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -131,7 +131,11 @@ img.img-topic {
   display: block;
   color: #007FFF;
   font-size: 14px;
-  margin-top: 15px;
+  margin-top: 5px;
+}
+
+.back-to-top {
+  margin-bottom: -5px !important;
 }
 
 /*By Euphoria*/
