修改了文中code和pre的样式

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -165,18 +165,28 @@ th {
 }
 
 code {
-  color: rgba(213, 0, 252, 0.91);
+  /*color: rgba(213, 0, 252, 0.91);*/
+  color: #d63200;
   background: rgba(78, 240, 233, 0.55);
-  margin: 0 4px;
+  /*margin: 0 4px;*/
+  margin: 0 2px;
   font-size: .9em;
-  border: 1px solid #d6d6d6;
-  border-radius: 3px;
-  padding: 2px 4px;
-  word-wrap: break-word;
+  /*border: 1px solid #d6d6d6;*/
+  /*border-radius: 3px;*/
+  border-radius: 2px;
+  /*padding: 2px 4px;*/
+  padding: 3px 5px;
+  /*word-wrap: break-word;*/
+  white-space: nowrap;
 }
 
 code, pre {
-  font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
+  /*font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;*/
+  font-family: "Roboto Mono", Monaco, courier, monospace;
+  font-size: 0.85em;
+  background-color: #f8f8f8;
+  -webkit-font-smoothing: initial;
+  -moz-osx-font-smoothing: initial;
 }
 
 pre {
