将code块字体改回了consolas

--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -181,8 +181,8 @@ code {
 }
 
 code, pre {
-  /*font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;*/
-  font-family: "Roboto Mono", Monaco, courier, monospace;
+  font-family: consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
+  //font-family: "Roboto Mono", Monaco, courier, monospace;
   font-size: 0.85em;
   background-color: #f8f8f8;
   -webkit-font-smoothing: initial;
